[package]
name = "list_comprehension"
version = "0.1.5"
edition = "2021"

description = "A macro for Haskell-like list comprehensions in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/ANIDENTIFIER/list_comprehension"
keywords = ["macro", "comprehensions", "haskell", "list"]


[dependencies]
