[package]
name = "list_comprehension"
version = "0.2.0"
edition = "2021"

description = "A macro for Haskell-like list comprehensions in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/ANIDENTIFIER/list_comprehension"
keywords = ["macro", "comprehensions", "haskell", "list"]


[dependencies.genawaiter]
version = "^0.99.1"
default-features = false
optional = true

[features]
default = ["lazy_comp"]
lazy_comp = ["genawaiter"]